// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comparison parses single line: a != b 1`] = `
comp != (1:0-1:6)
  ident (1:0-1:1) a
  ident (1:5-1:6) b
`;

exports[`comparison parses single line: a < b 1`] = `
comp < (1:0-1:5)
  ident (1:0-1:1) a
  ident (1:4-1:5) b
`;

exports[`comparison parses single line: a <= b 1`] = `
comp <= (1:0-1:6)
  ident (1:0-1:1) a
  ident (1:5-1:6) b
`;

exports[`comparison parses single line: a == b 1`] = `
comp == (1:0-1:6)
  ident (1:0-1:1) a
  ident (1:5-1:6) b
`;

exports[`comparison parses single line: a > b 1`] = `
comp > (1:0-1:5)
  ident (1:0-1:1) a
  ident (1:4-1:5) b
`;

exports[`comparison parses single line: a >= b 1`] = `
comp >= (1:0-1:6)
  ident (1:0-1:1) a
  ident (1:5-1:6) b
`;
